--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     font-size: 30px;
     cursor: pointer;
     user-select: none;
+    padding:20px;
     border-radius: 8px;
     transition: background 0.3s, transform 0.3s;
 }
